<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.SignupActivity">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_backgroundcolor"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/signup_image_layout"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/add_user_icon" />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_signup_message"
                        android:textColor="#696969"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fg_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_mail"
                            android:drawableLeft="@drawable/ic_mail"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_person"
                                android:drawableLeft="@drawable/ic_person"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_username"
                                android:imeOptions="actionNext"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_phone"
                                android:drawableLeft="@drawable/ic_phone"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_phone"
                                android:imeOptions="actionNext"
                                android:minWidth="320dp"
                                android:minHeight="45dp"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_lock"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:minWidth="320dp"
                                android:minHeight="45dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/colorTextInputBackground"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_confirm_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="12dp"
                                android:layout_marginRight="12dp"
                                android:background="@android:color/transparent"
                                android:drawableStart="@drawable/ic_lock"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawablePadding="12dp"
                                android:hint="@string/hint_confirm_password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:minWidth="320dp"
                                android:minHeight="45dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/button_signin"
                        style="@style/Button1"
                        android:layout_width="342dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/button_sign_up" />


                </LinearLayout>


            </RelativeLayout>


        </RelativeLayout>



    </LinearLayout>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="186dp"
        android:layout_height="190dp"
        android:layout_centerInParent="true"
        android:visibility="gone"

        />



</RelativeLayout>