...
    </group>
    <group android:checkableBehavior="single">
        <item
            android:title="Help">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/Login"
                    android:icon="@drawable/login"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/Profile"
                    android:icon="@drawable/profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/logout"/>
                <item
                    android:id="@+id/nav_setting"
                    android:title="@string/Setting"
                    android:icon="@drawable/settings"/>
...
